IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.af_ZA.po
+++ b/languages/lazaruside.af_ZA.po
@@ -5372,7 +5372,7 @@ msgid "A filter with the name \"%s\" already exists."
 msgstr ""
 
 #: lazarusidestrconsts.lisaftercleaningupswitchtoautomaticclean
-msgid "After cleaning up (clean all or clean common files), switch to clean automatically"
+msgid "After building with cleaning all switch to \"automatic\" clean up mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisalignment
@@ -5599,7 +5599,8 @@ msgid "Automatic"
 msgstr ""
 
 #: lazarusidestrconsts.lisautomatically
-msgid "Automatically"
+msgctxt "lazarusidestrconsts.lisautomatically"
+msgid "Automatic"
 msgstr ""
 
 #: lazarusidestrconsts.lisautomaticallyconvertlfmtolrs
@@ -6697,11 +6698,7 @@ msgid "Clean Lazarus Source"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanonlyonce
-msgid "Switch after building to automatically"
-msgstr ""
-
-#: lazarusidestrconsts.liscleanup
-msgid "Clean up"
+msgid "Switch to \"automatic\" mode after building"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanupandbuild
@@ -6715,6 +6712,10 @@ msgstr ""
 
 #: lazarusidestrconsts.liscleanuplazbuild
 msgid "Clean up + lazbuild"
+msgstr ""
+
+#: lazarusidestrconsts.liscleanupmode
+msgid "Clean up mode"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanuppackage
