--- a/languages/lazaruside.ar.po
+++ b/languages/lazaruside.ar.po
@@ -5377,7 +5377,7 @@ msgid "A filter with the name \"%s\" already exists."
 msgstr ""
 
 #: lazarusidestrconsts.lisaftercleaningupswitchtoautomaticclean
-msgid "After cleaning up (clean all or clean common files), switch to clean automatically"
+msgid "After building with cleaning all switch to \"automatic\" clean up mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisalignment
@@ -5604,7 +5604,8 @@ msgid "Automatic"
 msgstr ""
 
 #: lazarusidestrconsts.lisautomatically
-msgid "Automatically"
+msgctxt "lazarusidestrconsts.lisautomatically"
+msgid "Automatic"
 msgstr ""
 
 #: lazarusidestrconsts.lisautomaticallyconvertlfmtolrs
@@ -6706,12 +6707,8 @@ msgid "Clean Lazarus Source"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanonlyonce
-msgid "Switch after building to automatically"
+msgid "Switch to \"automatic\" mode after building"
 msgstr ""
-
-#: lazarusidestrconsts.liscleanup
-msgid "Clean up"
-msgstr "نضّف"
 
 #: lazarusidestrconsts.liscleanupandbuild
 msgctxt "lazarusidestrconsts.liscleanupandbuild"
@@ -6724,6 +6721,10 @@ msgstr "نضّف وإبن المشروع"
 
 #: lazarusidestrconsts.liscleanuplazbuild
 msgid "Clean up + lazbuild"
+msgstr ""
+
+#: lazarusidestrconsts.liscleanupmode
+msgid "Clean up mode"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanuppackage
