--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -5664,7 +5664,7 @@ msgid "A filter with the name \"%s\" already exists."
 msgstr ""
 
 #: lazarusidestrconsts.lisaftercleaningupswitchtoautomaticclean
-msgid "After cleaning up (clean all or clean common files), switch to clean automatically"
+msgid "After building with cleaning all switch to \"automatic\" clean up mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisalignment
@@ -5900,8 +5900,10 @@ msgid "Automatic"
 msgstr "אוטומטי"
 
 #: lazarusidestrconsts.lisautomatically
-msgid "Automatically"
-msgstr ""
+#, fuzzy
+msgctxt "lazarusidestrconsts.lisautomatically"
+msgid "Automatic"
+msgstr "אוטומטי"
 
 #: lazarusidestrconsts.lisautomaticallyconvertlfmtolrs
 msgid "Automatically convert .lfm files to .lrs resource files"
@@ -7053,11 +7055,7 @@ msgid "Clean Lazarus Source"
 msgstr "נקה את קוד המקור של לזרוס"
 
 #: lazarusidestrconsts.liscleanonlyonce
-msgid "Switch after building to automatically"
-msgstr ""
-
-#: lazarusidestrconsts.liscleanup
-msgid "Clean up"
+msgid "Switch to \"automatic\" mode after building"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanupandbuild
@@ -7071,6 +7069,10 @@ msgstr ""
 
 #: lazarusidestrconsts.liscleanuplazbuild
 msgid "Clean up + lazbuild"
+msgstr ""
+
+#: lazarusidestrconsts.liscleanupmode
+msgid "Clean up mode"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanuppackage
