--- a/languages/lazaruside.tr.po
+++ b/languages/lazaruside.tr.po
@@ -5365,7 +5365,9 @@ msgid "A filter with the name \"%s\" already exists."
 msgstr "\"%s\" adı olan bir filtre zaten var."
 
 #: lazarusidestrconsts.lisaftercleaningupswitchtoautomaticclean
-msgid "After cleaning up (clean all or clean common files), switch to clean automatically"
+#, fuzzy
+#| msgid "After cleaning up (clean all or clean common files), switch to clean automatically"
+msgid "After building with cleaning all switch to \"automatic\" clean up mode"
 msgstr "Temizledikten sonra (tümünü temizle veya genel dosyaları temizle), otomatik olarak temizlemeye geç"
 
 #: lazarusidestrconsts.lisalignment
@@ -5593,7 +5595,10 @@ msgid "Automatic"
 msgstr "Otomatik"
 
 #: lazarusidestrconsts.lisautomatically
-msgid "Automatically"
+#, fuzzy
+#| msgid "Automatically"
+msgctxt "lazarusidestrconsts.lisautomatically"
+msgid "Automatic"
 msgstr "Otomatik olarak"
 
 #: lazarusidestrconsts.lisautomaticallyconvertlfmtolrs
@@ -6696,12 +6701,10 @@ msgid "Clean Lazarus Source"
 msgstr "Lazarus Kaynağını Temizle"
 
 #: lazarusidestrconsts.liscleanonlyonce
-msgid "Switch after building to automatically"
+#, fuzzy
+#| msgid "Switch after building to automatically"
+msgid "Switch to \"automatic\" mode after building"
 msgstr "Oluşturduktan sonra otomatik olarak geçiş yap"
-
-#: lazarusidestrconsts.liscleanup
-msgid "Clean up"
-msgstr "Temizle"
 
 #: lazarusidestrconsts.liscleanupandbuild
 msgctxt "lazarusidestrconsts.liscleanupandbuild"
@@ -6715,6 +6718,10 @@ msgstr "Temizle ve projeyi derle"
 #: lazarusidestrconsts.liscleanuplazbuild
 msgid "Clean up + lazbuild"
 msgstr "Temizle + lazbuild"
+
+#: lazarusidestrconsts.liscleanupmode
+msgid "Clean up mode"
+msgstr ""
 
 #: lazarusidestrconsts.liscleanuppackage
 #, object-pascal-format
