--- a/languages/lazaruside.id.po
+++ b/languages/lazaruside.id.po
@@ -5565,7 +5565,7 @@ msgid "A filter with the name \"%s\" already exists."
 msgstr ""
 
 #: lazarusidestrconsts.lisaftercleaningupswitchtoautomaticclean
-msgid "After cleaning up (clean all or clean common files), switch to clean automatically"
+msgid "After building with cleaning all switch to \"automatic\" clean up mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisalignment
@@ -5796,7 +5796,8 @@ msgid "Automatic"
 msgstr ""
 
 #: lazarusidestrconsts.lisautomatically
-msgid "Automatically"
+msgctxt "lazarusidestrconsts.lisautomatically"
+msgid "Automatic"
 msgstr ""
 
 #: lazarusidestrconsts.lisautomaticallyconvertlfmtolrs
@@ -6922,11 +6923,7 @@ msgid "Clean Lazarus Source"
 msgstr "Bersihkan Sumber Lazarus"
 
 #: lazarusidestrconsts.liscleanonlyonce
-msgid "Switch after building to automatically"
-msgstr ""
-
-#: lazarusidestrconsts.liscleanup
-msgid "Clean up"
+msgid "Switch to \"automatic\" mode after building"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanupandbuild
@@ -6940,6 +6937,10 @@ msgstr ""
 
 #: lazarusidestrconsts.liscleanuplazbuild
 msgid "Clean up + lazbuild"
+msgstr ""
+
+#: lazarusidestrconsts.liscleanupmode
+msgid "Clean up mode"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanuppackage
