--- a/languages/lazaruside.pot
+++ b/languages/lazaruside.pot
@@ -5346,7 +5346,7 @@ msgid "A filter with the name \"%s\" already exists."
 msgstr ""
 
 #: lazarusidestrconsts.lisaftercleaningupswitchtoautomaticclean
-msgid "After cleaning up (clean all or clean common files), switch to clean automatically"
+msgid "After building with cleaning all switch to \"automatic\" clean up mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisalignment
@@ -5573,7 +5573,8 @@ msgid "Automatic"
 msgstr ""
 
 #: lazarusidestrconsts.lisautomatically
-msgid "Automatically"
+msgctxt "lazarusidestrconsts.lisautomatically"
+msgid "Automatic"
 msgstr ""
 
 #: lazarusidestrconsts.lisautomaticallyconvertlfmtolrs
@@ -6667,11 +6668,7 @@ msgid "Clean Lazarus Source"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanonlyonce
-msgid "Switch after building to automatically"
-msgstr ""
-
-#: lazarusidestrconsts.liscleanup
-msgid "Clean up"
+msgid "Switch to \"automatic\" mode after building"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanupandbuild
@@ -6685,6 +6682,10 @@ msgstr ""
 
 #: lazarusidestrconsts.liscleanuplazbuild
 msgid "Clean up + lazbuild"
+msgstr ""
+
+#: lazarusidestrconsts.liscleanupmode
+msgid "Clean up mode"
 msgstr ""
 
 #: lazarusidestrconsts.liscleanuppackage
